# astro-analysis-service

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  Singularity.def  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci-2.yml  ci.yml  singularity.yml
astro_analysis_service/: __init__.py  __version__.py  config.py  data_loader.py  logging_config.py  main.py  models.py  nasa_client.py  service.py
astro_analysis_service/data/cache/: nasa_exoplanets.json
astro_analysis_service/templates/: terminal.html
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  main.ts  styles.css  types.ts
frontend/src/components/: AnalysisView.vue  CorrelationScatter.vue  DistanceDistribution.vue  FiltersPanel.vue  MagnitudeDistribution.vue  ObjectsTable.vue  PaginationControls.vue  SettingsModal.vue  SpectralBreakdown.vue  StatsPanel.vue  StatusBar.vue
frontend/src/stores/: catalog.ts
scripts/: release.sh
tests/: test_api.py  test_nasa_client.py
