[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "astro-analysis-service"
version = "0.1.0"
description = "FastAPI microservice for filtering astronomical objects and computing stats."
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.0",
    "httpx>=0.28.0",
    "prometheus-fastapi-instrumentator>=6.1.0",
    "prometheus-client>=0.20.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "httpx>=0.28.0",
    "pylint>=3.2.0"
]

[tool.setuptools.packages.find]
include = ["astro_analysis_service*"]

[tool.pylint.main]
max-line-length = 100

[tool.pylint."messages control"]
disable = [
    "import-error",
    "too-few-public-methods",
    "redefined-outer-name",
    "protected-access",
]
